--- a/AngularJS - Getting Start - PluralSight/index.html
+++ b/AngularJS - Getting Start - PluralSight/index.html
@@ -1,1 +1,19 @@
-test
+<!doctype html>
+<html ng-app>
+<head>
+    <script data-require="angular.js@*" data-semver="1.3.0-beta.5" src="https://code.angularjs.org/1.3.0-beta.5/angular.js"></script>
+    <script src="Script/script.js" ></script>
+</head>
+<body >
+    <div ng-controller="MainController">
+       me: {{person.firstName}}-{{person.lastName}}
+
+
+        <div>Name:{{user.name}}</div>
+        <div>
+            <img ng-src="{{user.avatar_url}}">
+        </div>
+    </div>
+
+</body>
+</html>
